--- a/farmer.css
+++ b/farmer.css
@@ -1,7 +1,38 @@
-*{
-  padding:0;
-  border:0;
+/*universal selectors(apply to all elements)*/
+*{  margin:0;
+    padding:0;
+    border: 0;
+    box-sizing: border-box;
 }
-Hii Sohan 
-hii sofian
-Hii Soumil
+
+body{
+ height: 100vh;
+ width: 100vw;
+}
+
+:root{
+    --paddingLoginSignup: 20px; /*variable for frequently used thing*/
+}
+
+.background{
+    background-color: rgb(131, 169, 69);
+    height: 100%;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: flex-end;
+    /*background-image: url("loginbackground.");*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+.loginSignup{
+    background-color: white;
+    height: calc(100vh - (var(--paddingLoginSignup)*2)); 
+    width: 40%;
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px 5px #1e1e1e5c; /*values:- x offsset,y-offest,blur-radius,spread-radius,color*/
+    position: relative; /*z-index can be applied for any non static position value*/
+    z-index: 10;
+    margin: var(--paddingLoginSignup) var(--paddingLoginSignup) var(--paddingLoginSignup) 0px;
+} 
