--- a/farmer.css
+++ b/farmer.css
@@ -1,7 +1,7 @@
 /*universal selectors(apply to all elements)*/
 *{  margin:0;
     padding:0;
-    border: 0;
+    
     box-sizing: border-box;
 }
 
@@ -26,7 +26,9 @@ body{
     background-size: cover;
     
 }
-.loginSignup{
+
+
+.parentLoginSignup{
     background-color: white;
     height: calc(100vh - (var(--paddingLoginSignup)*2)); 
     width: 40%;
@@ -35,4 +37,74 @@ body{
     position: relative; /*z-index can be applied for any non static position value*/
     z-index: 10;
     margin: var(--paddingLoginSignup) var(--paddingLoginSignup) var(--paddingLoginSignup) 0px;
+    padding:40px 60px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    
 } 
+.childLoginSignup{
+    height: fit-content;
+}
+
+/*heading on top saying Sign Up*/
+#signup{
+    font-size: 2.5rem;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
+    padding-bottom: 30px;
+}
+
+.formContainer{
+    margin-bottom: 30px;
+    width: fit-content;
+}
+#formLabel{
+    font-size:1.2rem;
+    margin-bottom: 5px;
+}
+.form{
+    padding: 10px;
+    height: 40px;
+    width: 300px;
+    border: 1px solid #aeaeae;
+    border-radius: 5px;
+    font-size: 1.1rem;
+}
+.form:focus {
+    outline: 1.5px solid #379e37;}
+
+.LableTxt{
+    font-family: "Moderustic", sans-serif;
+    font-size: 0.9rem;
+}
+#passwordContainer{margin-bottom: 5px;}
+#showPasswordContainer{margin-bottom: 60px;}
+
+
+/*sign-up button*/
+#signupBtn{
+    width: 300px; 
+    height: 40px; 
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    font-size: 1.5rem; 
+    cursor: pointer; 
+    margin-bottom:5px;
+    font-family: "Moderustic", sans-serif;
+}
+#signupBtn:hover{
+background-color: #45a049;
+}
+#signupBtn:active{
+    background-color: #367c39; 
+    transform: scale(0.95); 
+    }
+#loginSwitchContainer{
+    text-align: center;
+}
+.loginSwitch{
+   width: fit-content;
+}
