--- a/farmer.css
+++ b/farmer.css
@@ -15,13 +15,13 @@ body{
 }
 
 .background{
-    background-color: rgb(131, 169, 69);
+    
     height: 100%;
     width: 100%;
     display:flex;
     align-items: center;
     justify-content: flex-end;
-    /*background-image: url("loginbackground.");*/
+    background-image: url("back.png");
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -78,6 +78,12 @@ body{
     font-family: "Moderustic", sans-serif;
     font-size: 0.9rem;
 }
+#loginTxt{
+    cursor: pointer;
+    font-weight: 700;
+    color: #2d2d2d;
+ 
+}
 #passwordContainer{margin-bottom: 5px;}
 #showPasswordContainer{margin-bottom: 60px;}
 
@@ -86,7 +92,7 @@ body{
 #signupBtn{
     width: 300px; 
     height: 40px; 
-    background-color: #4CAF50; 
+    background-color: #237426; 
     color: white; 
     border: none; 
     border-radius: 5px; 
