--- a/farmer.css
+++ b/farmer.css
@@ -1,7 +1,7 @@
 /*universal selectors(apply to all elements)*/
 *{  margin:0;
     padding:0;
-    
+    user-select: none;
     box-sizing: border-box;
 }
 
@@ -20,7 +20,6 @@ body{
     width: 100%;
     display:flex;
     align-items: center;
-    justify-content: flex-end;
     background-image: url("back.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,9 +28,11 @@ body{
 
 
 .parentLoginSignup{
-    background-color: white;
+    background-color: rgba(249, 249, 249, 0.728);
+    backdrop-filter: blur(5px);
+    border: solid 2px white;
     height: calc(100vh - (var(--paddingLoginSignup)*2)); 
-    width: 40%;
+    width:40%;
     border-radius: 25px;
     box-shadow: 0px 0px 5px 5px #1e1e1e5c; /*values:- x offsset,y-offest,blur-radius,spread-radius,color*/
     position: relative; /*z-index can be applied for any non static position value*/
@@ -51,7 +52,7 @@ body{
 #signup{
     font-size: 2.5rem;
     font-family: "Noto Sans KR", sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     padding-bottom: 30px;
 }
 
@@ -61,6 +62,7 @@ body{
 }
 #formLabel{
     font-size:1.2rem;
+    font-weight: 500;
     margin-bottom: 5px;
 }
 .form{
@@ -102,10 +104,12 @@ body{
     font-family: "Moderustic", sans-serif;
 }
 #signupBtn:hover{
-background-color: #45a049;
+background-color: #2f7532;
+transform: scale(1.05);
+transition: 0.3s ease;
 }
 #signupBtn:active{
-    background-color: #367c39; 
+    background-color: #327d36; 
     transform: scale(0.95); 
     }
 #loginSwitchContainer{
@@ -113,4 +117,61 @@ background-color: #45a049;
 }
 .loginSwitch{
    width: fit-content;
+}
+
+
+.description{
+    height: calc(100vh - (var(--paddingLoginSignup)*2)); 
+    width:60%;
+    position: relative;
+    margin: var(--paddingLoginSignup) var(--paddingLoginSignup)var(--paddingLoginSignup) var(--paddingLoginSignup);
+    display: flex;
+    flex-direction: column;
+}
+
+.figure{
+    height: 60%;
+    width: 100%;
+    background-image: url("logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#descriptionTxt{
+    color: white;
+    font-family: "Noto Sans KR", sans-serif;
+    border-radius: 25px;
+    font-size: 1.2em;
+    width: 100%;
+    text-align: center;
+}
+#socials{
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    height: 40px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+}
+.icons{
+    background-color: rgba(94, 94, 94, 0.242);
+    backdrop-filter: blur(3px);
+    border:none;
+    border-radius: 25px;
+    height: 40px;
+    width: 20%;
+    box-shadow: 0px 0px 5px 5px #13131335;
+    padding:7px;
+    color: white;
+    font-size: 1.1rem;
+    font-family:"Oswald", sans-serif;
+    overflow:hidden;
+    text-align: center;
+}
+.icons:hover{
+    backdrop-filter: blur(10px);
+    transform: scale(1.1);
+    transition: 0.3s ease;
 }
