--- a/farmer.css
+++ b/farmer.css
@@ -28,7 +28,7 @@ body{
 
 
 .parentLoginSignup{
-    background-color: rgba(249, 249, 249, 0.728);
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(5px);
     border: solid 2px white;
     height: calc(100vh - (var(--paddingLoginSignup)*2)); 
@@ -38,61 +38,69 @@ body{
     position: relative; /*z-index can be applied for any non static position value*/
     z-index: 10;
     margin: var(--paddingLoginSignup) var(--paddingLoginSignup) var(--paddingLoginSignup) 0px;
-    padding:40px 60px;
+    padding:20px 60px;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow:none;
     
 } 
-.childLoginSignup{
+.childSignup{
     height: fit-content;
+    width: 85%;
+   
 }
 
 /*heading on top saying Sign Up*/
 #signup{
     font-size: 2.5rem;
-    font-family: "Noto Sans KR", sans-serif;
-    font-weight: 600;
-    padding-bottom: 30px;
+    font-family: "Oswald", sans-serif;
+    font-weight: 500;
+    margin-bottom: 20px;
+    
 }
 
 .formContainer{
-    margin-bottom: 30px;
-    width: fit-content;
+    margin-bottom: 20px;
+    width: 100%;
 }
-#formLabel{
-    font-size:1.2rem;
-    font-weight: 500;
-    margin-bottom: 5px;
+.optionContainer{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
 }
+
 .form{
     padding: 10px;
     height: 40px;
-    width: 300px;
+    width: 100%;
     border: 1px solid #aeaeae;
     border-radius: 5px;
     font-size: 1.1rem;
+    box-shadow: 0px 0px 5px 5px #e3e3e35c; 
 }
 .form:focus {
     outline: 1.5px solid #379e37;}
 
 .LableTxt{
-    font-family: "Moderustic", sans-serif;
-    font-size: 0.9rem;
+    font-family: "PT Sans Narrow", sans-serif;
+    font-size: 1.1em;
+    font-weight: 500;
+    margin-bottom: 5px;
 }
 #loginTxt{
     cursor: pointer;
     font-weight: 700;
     color: #2d2d2d;
+    white-space: nowrap;
  
 }
 #passwordContainer{margin-bottom: 5px;}
-#showPasswordContainer{margin-bottom: 60px;}
+#showPasswordContainer{margin-bottom: 30px;}
 
 
 /*sign-up button*/
 #signupBtn{
-    width: 300px; 
+    width: 100%; 
     height: 40px; 
     background-color: #237426; 
     color: white; 
@@ -102,10 +110,10 @@ body{
     cursor: pointer; 
     margin-bottom:5px;
     font-family: "Moderustic", sans-serif;
+    box-shadow: 0px 0px 5px 5px #bfe6cf5c; 
 }
 #signupBtn:hover{
-background-color: #2f7532;
-transform: scale(1.05);
+background-color: #367939;
 transition: 0.3s ease;
 }
 #signupBtn:active{
@@ -139,9 +147,9 @@ transition: 0.3s ease;
 
 #descriptionTxt{
     color: white;
-    font-family: "Noto Sans KR", sans-serif;
+    font-family: "Moderustic", sans-serif;
     border-radius: 25px;
-    font-size: 1.2em;
+    font-size: 1.3em;
     width: 100%;
     text-align: center;
 }
@@ -165,9 +173,9 @@ transition: 0.3s ease;
     box-shadow: 0px 0px 5px 5px #13131335;
     padding:7px;
     color: white;
-    font-size: 1.1rem;
-    font-family:"Oswald", sans-serif;
-    overflow:hidden;
+    font-size:clamp(0.4rem,1.1rem, 1.2rem);
+    font-family: "Moderustic", sans-serif;
+    overflow:none;
     text-align: center;
 }
 .icons:hover{
