--- a/farmer.css
+++ b/farmer.css
@@ -30,25 +30,33 @@ body{
 .parentLoginSignup{
     background-color: rgb(255, 255, 255);
     backdrop-filter: blur(5px);
-    border: solid 2px white;
-    height: calc(100vh - (var(--paddingLoginSignup)*2)); 
+    border: groove 2px rgb(77, 77, 77);
+    height: calc(100vh - (var(--paddingLoginSignup)*2));
+    background-color: #ffffff50;
     width:40%;
     border-radius: 25px;
     box-shadow: 0px 0px 5px 5px #1e1e1e5c; /*values:- x offsset,y-offest,blur-radius,spread-radius,color*/
+    backdrop-filter: blur(10px);
     position: relative; /*z-index can be applied for any non static position value*/
     z-index: 10;
     margin: var(--paddingLoginSignup) var(--paddingLoginSignup) var(--paddingLoginSignup) 0px;
     padding:20px 60px;
     display: flex;
     justify-content: center;
+    align-items: center;
     overflow:none;
     
 } 
 .childSignup{
+    border-radius: 25px;
+    border: groove 2px #ebebeb;
+    padding: 10px;
     height: fit-content;
-    width: 85%;
-   
+    width: 100%;
+    background-color: white;
+   box-shadow:  0px 0px 5px 5px #1e1e1e5c;
 }
+
 
 /*heading on top saying Sign Up*/
 #signup{
