--- a/farmer.css
+++ b/farmer.css
@@ -57,7 +57,6 @@ body{
    box-shadow:  0px 0px 5px 5px #1e1e1e5c;
 }
 
-
 /*heading on top saying Sign Up*/
 #signup{
     font-size: 2.5rem;
@@ -157,9 +156,9 @@ transition: 0.3s ease;
     color: white;
     font-family: "Moderustic", sans-serif;
     border-radius: 25px;
-    font-size: 1.3em;
+    font-size: clamp(1.3rem,1.4rem,1.7rem);
     width: 100%;
-    text-align: center;
+    text-align: justify;
 }
 #socials{
     display: flex;
@@ -171,6 +170,9 @@ transition: 0.3s ease;
     left: 20px;
     right: 20px;
 }
+i{
+    display: none;
+}
 .icons{
     background-color: rgba(94, 94, 94, 0.242);
     backdrop-filter: blur(3px);
@@ -179,7 +181,7 @@ transition: 0.3s ease;
     height: 40px;
     width: 20%;
     box-shadow: 0px 0px 5px 5px #13131335;
-    padding:7px;
+    padding:7px 0px;
     color: white;
     font-size:clamp(0.4rem,1.1rem, 1.2rem);
     font-family: "Moderustic", sans-serif;
@@ -190,4 +192,155 @@ transition: 0.3s ease;
     backdrop-filter: blur(10px);
     transform: scale(1.1);
     transition: 0.3s ease;
+}
+
+@media screen and (min-device-width: 900px) and (max-device-width: 1190px), screen and (min-width: 900px) and (max-width: 1190px){
+    .figure{
+        height: 40%;
+    }
+    
+}
+
+@media screen and (min-device-width: 850px) and (max-device-width: 900px), screen and (min-width: 850px) and (max-width: 900px){
+    #signup{
+        margin-bottom: 40px;
+    }
+    .formContainer {
+        margin-bottom: 30px;
+    }
+   
+    .parentLoginSignup{
+        background-color: #ffffff;
+        backdrop-filter: blur(0px);
+        padding: 10px 30px;
+        width: 60%;
+        
+    }
+    .childSignup{
+        border: none;
+        padding: 0px 0px;
+        box-shadow: none;
+    }
+    
+    i{
+      display: none;
+    }
+    .figure{
+        height: 40%;
+    }
+    .icons{
+        background-color: transparent;
+        backdrop-filter: blur(0px);
+        box-shadow: none;
+}
+}
+
+@media screen and (min-device-width: 700px) and (max-device-width: 850px), screen and (min-width: 700px) and (max-width: 850px){
+    #signup{
+        margin-bottom: 40px;
+    }
+    .formContainer {
+        margin-bottom: 30px;
+    }
+   
+    .parentLoginSignup{
+        background-color: #ffffff;
+        backdrop-filter: blur(0px);
+        padding: 10px 30px;
+        width: 60%;
+        
+    }
+    .childSignup{
+        border: none;
+        padding: 0px 0px;
+        box-shadow: none;
+    }
+    
+    i{
+      display: none;
+    }
+    .figure{
+        height: 40%;
+    }
+    .icons{
+        display: none;
+}
+}
+
+@media screen and (min-device-width:500px) and (max-device-width: 700px), screen and (min-width: 500px) and (max-width:700px){
+    #signup{
+        font-size: 3.5rem;
+        margin-bottom: 40px;
+    }
+    .form{
+        width: 100%;
+    }
+    .formContainer {
+        margin-bottom: 30px;
+    }
+    .description {
+       display: none;
+    }
+    .parentLoginSignup{
+        background-color: #ffffff;
+        backdrop-filter: blur(0px);
+        margin: 0px;
+        border-radius: 0px;
+        padding: 10px 30px;
+        width: 100%;
+        height: 100%;
+        align-items: flex-start;
+    }
+    .childSignup{
+        height:100%;
+        border: none;
+        padding: 0px 0px;
+        box-shadow: none;
+    }
+    #descriptionTxt{
+        display: none;
+    }
+    
+    i{
+      display: none;
+    }
+    .figure{
+        display: none;
+    }
+    .icons{
+        display: none;
+}
+}
+
+
+@media screen and (min-device-width:0px) and (max-device-width: 500px), screen and (min-width: 0px) and (max-width:500px){
+    #signup{
+        margin-bottom: 40px;
+    }
+    .formContainer {
+        margin-bottom: 30px;
+    }
+    .description {
+       display: none;
+    }
+    .parentLoginSignup{
+        background-color: #ffffff;
+        backdrop-filter: blur(0px);
+        margin: 0px;
+        border-radius: 0px;
+        padding: 10px 30px;
+        width: 100%;
+        height: 100%;
+        
+    }
+    .childSignup{
+        border: none;
+        padding: 0px 0px;
+        box-shadow: none;
+    }
+    #descriptionTxt{
+        display: none;
+    }
+    
+    
 }
