--- a/mainPage.css
+++ b/mainPage.css
@@ -11,50 +11,75 @@ body{
 
 .navbar{
     width: 100%;
-    height:40px;
-    background-color: #ebebeb;
+    height:60px;
+    background-color: #f3f3f3;
     position: fixed;
-    box-shadow: 0px 5px 5px 5px #dadada;
+    box-shadow: 0px 5px 10px 6px #00000022;
     text-decoration: none;
     font-size: 1.1rem;
     display: flex;
     align-items:center;
     
 }
-.navbar #logo{
-    height: 100%;
+#logo{
+    background-image: url("logoBlack.png");
+    filter:drop-shadow(5px 5px 5px #9a9a9a73);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 80%;
     width:20%;
-    border: solid 2px black;
+    min-width: 130px;
+    border: solid 2px #00000000;
     float:left;
 }
 
 .links{
-    width:80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 30%;
+    min-width: 260px;
+    height:70%;
+    background-color: white;
+    padding: 5px;
+    border-radius: 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    box-shadow: 0px 0px 5px 5px #6565651e; 
 }
 
-.profile{
+.btn{
+    background-color: inherit;
+    height: 100%;
+    border:none;
+    padding: 0 10px;
+    text-decoration: none;
+    color:black;
+    font-size: 1rem;
+    border-radius: 25px;
+}
+#home{
+    background-color: #000000;
+    color: white;
+}
+.searchContainer{
+    height: 100%;
+    width: 20%;
+    border: solid 2px black;
+}
+.profile{  
     height: 100%;
     border:solid 2px black;
     width:10%;
 }
 
 
-a{
-    text-decoration: none;
-    color:black;
-}
-a:hover{
-    color:#42a542;
-    transition: 0.3s ease;
-}
+
 
 main{
     padding-top:100px;
     width:100%;
     height: fit-content;
-    background-color: #eaeaea;
+    background-color: #ffffff;
     overflow-x:hidden;
 }
 
@@ -75,5 +100,7 @@ main{
     height: 400px;
     margin: 20px 0px;
 }
+
+
 
 
