--- a/mainPage.css
+++ b/mainPage.css
@@ -2,6 +2,8 @@
     padding:0;
     margin:0;
     box-sizing: border-box;  
+     -webkit-tap-highlight-color:transparent;
+}
 }
 body{
     height: 100%;
