--- a/mainPage.css
+++ b/mainPage.css
@@ -162,14 +162,53 @@ main{
     display:grid;
     box-sizing: border-box;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px; /* Add gap between grid items instead of margin */
+    row-gap: 50px; /* Add gap between grid items instead of margin */
+    column-gap:20px;
     padding:0px 30px;
 }
 
 .card{
+    display:flex;
     background-color: #4b4b4b;
     border-radius: 10px;
-    height: 400px;
+    height: 250px;
     margin: 20px 0px;
+    overflow:hidden;
+}
+
+.itemImgContainer{
+ width:45%;
+ height:100%;
+ background-color: #ffffff;
+ position:relative;
+}
+.itemImg{
+    background-image: url("onion.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height:100%;
+    width:100%;
+    background-color: #ffffff;
+}
+
+.priceContainer{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+    width:100%;
+    height: 100%;
+    background-image: linear-gradient(to top,#000000b1,rgba(0, 0, 0, 0.071) 30%);
+}
+.itemName{
+    color: white;
+    font-size: 2rem;
+}
+.itemDescription{
+    height: 100%;
+    width: 55%;
+    background-color: white;
 }
 
