--- a/mainPage.css
+++ b/mainPage.css
@@ -9,15 +9,20 @@ body{
     height: 100%;
     width: 100%;/*Dont write 100vw*/
    }
- :root{
+ :root{ --navbarGray:#f3f3f3;
         --navbarGreen: #418d60;
         --navbarDarkGreen:#2b5f40;
+        --footer:#08170e;
+
       }
 
 .navbar{
     width: 100%;
+    position: relative;
+    z-index: 5;
     height:60px;
-    background-color: #f3f3f3;
+    background-color: #f3f3f3c8;
+    backdrop-filter: blur(5px);
     position: fixed;
     box-shadow: 0px 5px 10px 6px #00000022;
     text-decoration: none;
@@ -148,76 +153,272 @@ body{
 
 
 main{
-    padding-top:100px;
+    padding-top:80px;
     width:100%;
     height: fit-content;
-    background-color: #ffffff;
+    background-color:#e8f3ec;
     overflow-x:hidden;
+}
+/*#9ac5ad;
+#8eb39e*/
+.topDecor{
+    font-family: "Ubuntu", sans-serif;
+    background-image: url("images/topDecor3.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    user-select: none;
+    padding:40px;
+    color: white;
+    font-size: clamp(6rem,4rem,3rem);
+    background-color: black;
+    width: 100%;
+    height:450px;
+    position:relative;
+    box-shadow:  inset 0px 0px  5px 5px #0000003e;
+}    
+       
+#exploreTxt{
+    font-size: clamp(9rem,6rem,4rem);/*
+    background: linear-gradient(to right, #90b800, #1a9421);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;important, see what happens without this lines*/
 }
 
 .cards{
     width: 100%;
     height: fit-content;
-    background-color: rgb(161, 161, 161);
+    background-color:inherit;
     display:grid;
     box-sizing: border-box;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 50px; /* Add gap between grid items instead of margin */
     column-gap:20px;
-    padding:0px 30px;
+    padding:50px 30px;
 }
 
 .card{
     display:flex;
+    position: relative;
     background-color: #4b4b4b;
     border-radius: 10px;
     height: 250px;
     margin: 20px 0px;
     overflow:hidden;
+    display: flex;
+    align-items: center;
+}
+.card:hover{
+    transform: scale(1.05);
+    transition: 0.3s ease;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+    cursor:pointer;  
 }
 
 .itemImgContainer{
- width:45%;
+ background-image: url("images/onion.jpg");
+ background-repeat: no-repeat;
+ background-size: cover;
+ width:100%;
  height:100%;
- background-color: #ffffff;
+ background-color: #020202;
  position:relative;
 }
-.itemImg{
-    background-image: url("images/onion.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    height:100%;
-    width:100%;
-    background-color: #ffffff;
+.itemDescription{
+    display: none;
+    position: absolute;
+    z-index: 3;
+    padding: 5px;
+    right:15px;
+    height: 90%;
+    width: 55%;
+    background-color: #1b1b1b;
+    color: #ffffff;
+    font-size: 1rem;
+    border-radius: 25px; 
+    opacity: 0;
+}
+.card:hover .itemDescription{
+    display:block;  
+    opacity: 1;  
 }
 
-.priceContainer{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 0;
-    z-index: 2;
-    width:100%;
-    height: 100%;
-    background-image: linear-gradient(to top,#000000b1,rgba(0, 0, 0, 0.071) 30%);
-}
 .itemName{
-    color: white;
-    font-size: 2rem;
+    color: #ffffff;
+    font-size: 1.5rem;
 }
-.itemDescription{
-    height: 100%;
-    width: 55%;
-    background-color: white;
-    font-size: 20px;    
-    
+#addBtn{
+    display: inline-block;
+    font-size: 1rem;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: var(--navbarGreen);
+    color:white;
+    border:none;
 }
+
+
 .Contract{
     text-align: center;
 }
-.card:hover{
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
-    cursor:pointer;
+
+/*footer*/
+
+#questionDiv{
+    box-sizing:border-box;
+    display: flex;
+    height:20%;
+    width: 100%;
+    background-image: linear-gradient(to top,black 50%,#434343);
+    justify-content: center;
+    border-top: 2px solid #616161;
+    padding:8% 0%;
+}
+
+#innerQuestionDiv{
+    display: flex;
+    flex-direction: column;
+    height:fit-content;
+    width: 85vw;
+    background-color: transparent;
+    font-family: "Rubik", sans-serif;
+    text-align: center;
+    font-size: 5rem;
+    justify-content: center;
+    background-color:#ffffff;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+#questionDiv #freq{
+    margin:0% 0% 5% 0%;
+}
+
+#questionbox{
+    display: flex;
+    flex-direction: column;
+}
+.questionanswer{
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 10px;
+    height: fit-content;
+    width: 100%;
+}
+.question{
+    cursor: pointer;
+    box-sizing: border-box;
+    padding:0px 10px;
+    width: 100%;
+    display: flex;
+   
+    justify-content: space-between;
+    align-items: center;
+    background-color: #262626;
+    color: white;
+    border: none;
+    font-family: "Quicksand", sans-serif;
+    /*font-family:"Baloo Bhai 2", sans-serif;*/
+    font-size: 1.5rem;
+}
+.question:hover{
+    background-color: #424242;
+}
+
+.show{
+    font-size: 2rem;
+}
+.answer{
+    padding: 2px;
+    font-size: 1.2rem;
+    background-color: #616161;
+    color: white;
+    display: none;
+    font-family: "Rubik", sans-serif;
+    font-weight: 100;
+    font-family: "Rubik", sans-serif;
     
 }
+
+.upperFooter{ box-sizing: border-box;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    padding: 5% 7.5vw 100px 7.5vw;
+    justify-content: space-between;
+    width: 100%;
+    height:fit-content;
+    background-image: url("images/blackground.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-top: 2px solid #454545;
+    border-bottom: 2px solid #454545;
+}
+#heading{
+    height: 100%;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3rem;
+}
+#historyHeading{
+ font-size: 6rem;
+ font-family: "DM Serif Display", serif;
+ color:white;
+}
+#historyText{
+ color: white;
+ font-family: "Quicksand", sans-serif;
+}
+.imgc{
+    display: flex;
+    width: 30%;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+footer{
+    user-select:none;
+    color: #7a7a7a;
+    text-align: center;
+    background-color: var(--footer);
+    height:fit-content;
+    width: 100%;
+    padding: 15px 0px 2% 0px;
+  
+  }
+  
+  .foottxt{
+   display: flex;
+   justify-content: space-evenly;
+   padding: 2% 0% 1% 0%;
+   margin-bottom: 2%;
+  }
+  #know{
+      border-left: none;
+  }
+  .footdiv{
+   font-family: "Baloo Bhai 2", sans-serif;
+   text-align: center;
+   height:fit-content;
+   width:200px;
+   padding: 0% 1.5% 3% 1.5%;
+   border-bottom: 2px dotted #454545;
+  }
+  
+  .whitetxt{
+      font-size: 20px;
+      color: #ffffff;
+  }  
+  .footerLink:hover{
+      color: var(--blue);
+      cursor: pointer;
+  } 
+      
+  .greytxt{
+      font-family: "Baloo Bhai 2", sans-serif;
+      font-size: 1rem;
+      color: #7a7a7a;
+  }
