--- a/mainPage.css
+++ b/mainPage.css
@@ -203,7 +203,7 @@ main{
 .card{
     display:flex;
     position: relative;
-    background-color: #927e50;
+    background-color: white;
     border-radius: 10px;
     aspect-ratio: 304/200;
     margin: 20px 0px;
@@ -282,6 +282,54 @@ main{
 }
 #potato{
     background-image: url("images/potato.png");
+}
+#muskmelon{
+    background-image: url("images/muskmelon.png");
+}
+#corn{
+    background-image: url("images/corn.png");
+}
+#okra{
+    background-image: url("images/okra.png");
+}
+#tomato{
+    background-image: url("images/tomato.png");
+}
+#pea{
+    background-image: url("images/pea.png");
+}
+#spinach{
+    background-image: url("images/spinach.png");
+}
+#cabbage{
+    background-image: url("images/cabbage.png");
+}
+#eggplant{
+    background-image: url("images/eggplant.png");
+}
+#rice{
+    background-image: url("images/rice.png");
+}
+#wheat{
+    background-image: url("images/wheat.png");
+}
+#sugarcane{
+    background-image: url("images/sugarcane.png");
+}
+#oats{
+    background-image: url("images/oats.png");
+}
+#pear{
+    background-image: url("images/pear.png");
+}
+#orange{
+    background-image: url("images/orange.png");
+}
+#lemon{
+    background-image: url("images/lemon.png");
+}
+#watermelon{
+    background-image: url("images/watermelon.png");
 }
 /*--------------------------------------IMAGES----------------------------------------------------*/
 
