--- a/mainPage.css
+++ b/mainPage.css
@@ -8,6 +8,7 @@
 html,body{
     height: 100%;
     width: 100%;/*Dont write 100vw*/
+    min-width:300px;
    }
  :root{ --navbarGray:#f3f3f3;
         --navbarGreen: #418d60;
@@ -525,34 +526,123 @@ li{
       color: #7a7a7a;
   }
 
-  @media screen and (min-device-width: 415px) and (max-device-width: 640px), screen and (min-width: 415px) and (max-width: 640px){
+  @media screen and (min-device-width: 640px) and (max-device-width: 840px), screen and (min-width: 640px) and (max-width: 840px){
+    #historyHeading{
+        font-size: 5rem;
+    }
+    .r{
+        padding: 5% 0vw 70px 3vw;
+    }
+    
+}
+
+  @media screen and (min-device-width: 0px) and (max-device-width: 640px), screen and (min-width: 0px) and (max-width: 640px){
 
   .links .btn{
     font-size: 1.2rem;
   }
   .topDecor{
-    height: 350px;
+    height: 300px;
   }
   #exploreTxt{
-    font-size:7rem
+    font-size:5rem
 }
 #contractTxt{
-    font-size: 5rem;
+    font-size: 3rem;
+}
+
+#questionDiv{
+    padding: 8% 7.5vw;
+  }
+
+   #innerQuestionDiv #freq{
+    font-size: 3rem;
+    width: 100%;
+   }
+.questionanswer{
+    margin-bottom: 5px;
+}
+.question{
+    padding:0px 5px;
+    font-size: 1rem;
+}
+.show{
+    font-size: 0.8rem;
+}
+.answer{
+    padding: 2px;
+    font-size: 1rem; 
+}
+.r{ padding: 5% 7.5vw 70px 7.5vw;
+}
+#heading{
+    width:100%;
+}
+#historyHeading{
+ text-align: center;
+ font-size: 2.5rem;
+ width: 100%;
+ 
+}
+#historyText{
+ font-size:1rem;
+ width:100%;
+ text-align: justify;
+  text-justify: inter-word;
+}
+
+footer{
+padding: 0px 5px 5px 5px;
+box-sizing: border-box;
+
+}
+
+.footdiv{
+ text-align: center;
+ height:100px;
+ width:fit-content;
+ padding: 0% 1% 3% 1%;
+ border-left: none;
+ border-bottom: 2px double grey;
+ 
+}
+.footdiv li{
+    height: 20px;
+    padding: 1px;
+}
+.whitetxt{
+    font-size: 0.8rem;
+}  
+.footerLink{
+    font-size: 0.75rem;
+} 
+.greytxt{
+    font-size: 0.5rem;
 }
   }
 
-  @media screen and (min-device-width: 0px) and (max-device-width: 415px), screen and (min-width: 0px) and (max-width: 415px){
-
-    .links .btn{
-      font-size: 1rem;
+  @media screen and (min-device-width: 0px) and (max-device-width: 380px), screen and (min-width: 0px) and (max-width: 380px){
+  
+    #logo{
+        min-width: 90px;
     }
     .topDecor{
-        height: 300px;
-      }
-      #exploreTxt{
-        font-size:5rem
+        padding: 20px;
+    }
+    #exploreTxt{
+        font-size:4rem;
     }
     #contractTxt{
-        font-size: 3rem;
+        font-size: 2rem;
     }
-    }
+    .searchContainer{
+    height:65%;}
+
+    .links .btn{
+        font-size: 1rem;
+      }
+     .profile p{
+      display: none;
+     }
+}
+ 
