--- a/signupLogin.css
+++ b/signupLogin.css
@@ -3,8 +3,7 @@
     padding:0;
     user-select: none;
     box-sizing: border-box;
-   -webkit-tap-highlight-color:transparent;
-}
+    -webkit-tap-highlight-color:transparent;
 }
 
 body{
@@ -32,10 +31,11 @@ body{
 .parentLoginSignup{
     background-color: rgb(255, 255, 255);
     backdrop-filter: blur(5px);
+    border: groove 2px rgb(77, 77, 77);
     height: calc(100vh - (var(--paddingLoginSignup)*2));
     background-color: #ffffff50;
     width:40%;
-    border-radius: 45px;
+    border-radius: 25px;
     box-shadow: 0px 0px 5px 5px #1e1e1e5c; /*values:- x offsset,y-offest,blur-radius,spread-radius,color*/
     backdrop-filter: blur(10px);
     position: relative; /*z-index can be applied for any non static position value*/
@@ -52,7 +52,7 @@ body{
     border-radius: 25px;
     border: groove 2px #ebebeb;
     padding: 10px 20px;
-    height: fit-content;
+    height: 90%;
     width: 100%;
     background-color: white;
    box-shadow:  0px 0px 5px 5px #1e1e1e5c;
@@ -200,7 +200,6 @@ i{
     .figure{
         height: 40%;
     }
-    
 }
 
 @media screen and (min-device-width: 850px) and (max-device-width: 900px), screen and (min-width: 850px) and (max-width: 900px){
@@ -289,7 +288,7 @@ i{
        display: none;
     }
     .parentLoginSignup{
-         box-shadow: none;
+        box-shadow: none;
         background-color: #ffffff;
         backdrop-filter: blur(0px);
         margin: 0px;
@@ -333,7 +332,6 @@ i{
        display: none;
     }
     .parentLoginSignup{
-         box-shadow: none;
         background-color: #ffffff;
         backdrop-filter: blur(0px);
         margin: 0px;
