--- a/contractPage.css
+++ b/contractPage.css
@@ -192,10 +192,9 @@ main{
     color:black;
     font-size: 1.5rem;
     border-radius: 15px;  
-    display: flex;
-    align-items: center;
+  
 }
-#contract{
+#home{
     text-decoration: underline;
     text-decoration-thickness: 3px;
     text-underline-offset: 5px;
@@ -789,3 +788,4 @@ footer{
     display: none;
 }
 }
+ 
