--- a/mainPage.css
+++ b/mainPage.css
@@ -167,10 +167,10 @@ main{
  background-color: black;
 
 }
-
 .links{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     width: 95%;
     min-width:265px;
     height:65%;
@@ -182,6 +182,8 @@ main{
 }
 
 .btn{
+    display: flex;
+    align-items: center;
     font-family: "Ubuntu", sans-serif;
     cursor: pointer;
     user-select:none;
@@ -195,12 +197,6 @@ main{
     border-radius: 15px;  
   
 }
-#home{
-    text-decoration: underline;
-    text-decoration-thickness: 3px;
-    text-underline-offset: 5px;
-}
-
 
 #exploreTxt{
     font-size:9rem/*
