--- a/marketplacePage.css
+++ b/marketplacePage.css
@@ -162,17 +162,18 @@ main{
     justify-content: center;
     align-items: center;
  width: 100%;
- height:100px;
- background-color: #abc2a3;
- margin-top: 30px;
+ height:80px;
+ background-color: black;
+
 }
 
 .links{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     width: 95%;
     min-width:265px;
-    height:70%;
+    height:65%;
     background-color: white;
     padding: 5px;
     border-radius: 20px;
@@ -181,6 +182,8 @@ main{
 }
 
 .btn{
+    display: flex;
+    align-items: center;
     font-family: "Ubuntu", sans-serif;
     cursor: pointer;
     user-select:none;
@@ -192,8 +195,7 @@ main{
     color:black;
     font-size: 1.5rem;
     border-radius: 15px;  
-    display: flex;
-    align-items: center;
+  
 }
 #marketplace{
     text-decoration: underline;
