--- a/contractPage.css
+++ b/contractPage.css
@@ -162,10 +162,11 @@ main{
     justify-content: center;
     align-items: center;
  width: 100%;
- height:100px;
- background-color: #abc2a3;
- margin-top: 30px;
+ height:80px;
+ background-color: black;
+
 }
+
 .links{
     display: flex;
     justify-content: space-around;
