--- a/mainPage.css
+++ b/mainPage.css
@@ -180,6 +180,11 @@ main{
     display: flex;
     box-shadow: 0px 0px 5px 5px #6565651e; 
 }
+#home{
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 5px;
+}
 
 .btn{
     display: flex;
