--- a/marketplacePage.css
+++ b/marketplacePage.css
@@ -195,7 +195,12 @@ main{
     color:black;
     font-size: 1.5rem;
     border-radius: 15px;  
-  
+}
+
+#marketplace{
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 5px;
 }
 #marketplace{
     text-decoration: underline;
