--- a/contractPage.css
+++ b/contractPage.css
@@ -197,7 +197,7 @@ main{
     border-radius: 15px;  
   
 }
-#home{
+#contract{
     text-decoration: underline;
     text-decoration-thickness: 3px;
     text-underline-offset: 5px;
