--- a/marketplacePage.css
+++ b/marketplacePage.css
@@ -158,12 +158,13 @@ main{
 }    
 
 .linksContainer{
+    background-image:linear-gradient(to left,#41a58c,#5aaf4f); 
     display: flex;
     justify-content: center;
     align-items: center;
  width: 100%;
  height:80px;
- background-color: black;
+
 
 }
 
