--- a/contractPage.css
+++ b/contractPage.css
@@ -182,7 +182,7 @@ main{
     align-items: center;
  width: 100%;
  height:80px;
- background-color: black;
+ background-image:linear-gradient(to left,#41a58c,#5aaf4f); 
 
 }
 
