--- a/marketplacePage.css
+++ b/marketplacePage.css
@@ -282,6 +282,9 @@ main{
     height: 30px;
     width: 100%;
     display: flex;
+    justify-content: center;
+       
+    
 }
 .addBtn{
     display: inline-block;
@@ -293,7 +296,10 @@ main{
     background-color: var(--navbarGreen);
     color:white;
     border:none;
+    cursor: pointer; 
+    text-align: center;
 }
+
 .numberInput{
     flex:1;
     outline: none;
