--- a/mainPage.css
+++ b/mainPage.css
@@ -48,7 +48,7 @@ html,body{
 
 .searchProfile{
     display: flex;
-    width: 30%;
+    width: 35%;
     min-width: 220px;
     height: 100%;
     align-items: center;
@@ -59,7 +59,7 @@ html,body{
     padding: 4px 4px 4px 8px;
     justify-content: flex-end;
     border: none;
-    width:55%;
+    width:45%;
     min-width: 115px;
     height: 70%;
     background-color: white;
@@ -114,8 +114,9 @@ html,body{
     align-items: center;
     justify-content: center;
     height: 70%;
-    width:30%;
-    min-width: 94px;;
+    width:fit-content;
+    min-width: 94px;
+    padding: 3px;
     user-select: none;
     cursor: pointer;
 }
