--- a/marketPlace.css
+++ b/marketPlace.css
@@ -313,12 +313,10 @@ position:relative;
     margin-right: 10px;
     height: 100%;
     border-radius: 10px;
-    background-color: var(--navbarGreen);
+    background-image:linear-gradient(to left,#41a58c,#5aaf4f); 
     color:white;
     border:none;
-    cursor: pointer; 
 }
-
 
 .availability{
     width: fit-content;
