--- a/contractPage.css
+++ b/contractPage.css
@@ -287,7 +287,7 @@ main{
     right:15px;
     height: 90%;
     width: 45%;
-    background-color: #1b1b1b;
+    background-color: #0f3021;
     color: #ffffff;
     font-size: 1rem;
     border-radius: 25px; 
