--- a/mainPage.css
+++ b/mainPage.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;  
      -webkit-tap-highlight-color:transparent;
 }
-
 html,body{
     height: 100%;
     width: 100%;/*Dont write 100vw*/
@@ -15,7 +14,7 @@ html,body{
         --navbarDarkGreen:#2b5f40;
         --footer:#102c1b;
         --whiteGreen:#bfe0cc;
-        --mainColor:#e8f3ec;
+        --mainColor:#bfdeca;
 
       }
 
@@ -137,7 +136,7 @@ main{
     padding-top:10px;
     width:100%;
     height: fit-content;
-    background-color:var(--main);
+    background-color:var(--mainColor);
     overflow-x:hidden;
 }
 /*#9ac5ad;
@@ -149,7 +148,7 @@ main{
     background-size: cover;
     background-repeat: no-repeat;
     user-select: none;
-    padding:80px;
+    padding:40px;
     color: white;
     font-size: clamp(6rem,4rem,3rem);
     background-color: black;
@@ -157,6 +156,7 @@ main{
     height:450px;
     position:relative;
     box-shadow:  inset 0px 0px  5px 5px #0000003e;
+    margin-top:70px;
 }    
 
 .linksContainer{
@@ -165,7 +165,8 @@ main{
  align-items: center;
  width: 100%;
  height:80px;
- background-image:linear-gradient(to left,#41a58c,#5aaf4f); 
+ background-image:linear-gradient(to right,#174a3d,#21461c); 
+ border-bottom: 2px solid #2a2a2a;
 }
 
 .links{
@@ -320,7 +321,7 @@ main{
    width:20%; 
    height:100%;
    justify-content:center;
-   background-color: white;
+   background-image:linear-gradient(to bottom,#174a3d,#21461c); 
    box-shadow: 5px 10px 5px 5px #1313132f;
     display: flex;
     flex-direction: column;
@@ -335,9 +336,12 @@ main{
     font-size: 1.3rem;
     margin:10px 0px 20px 0px;
 }
+#inventoryHeading{
+    color: white;
+    background-color: inherit;
+}
 #history{
-
-    color:#ababab;
+    color:#65826f;
 }
 .outerInventoryContainer{
     height:90%;
@@ -348,12 +352,11 @@ main{
 }
 .innerInventoryContainer{
     font-family: "Ubuntu", sans-serif;
-    padding: 20px 10px;
+    padding: 10px 10px;
     height: 90%;
     width:90%;
     border-radius: 20px;
-     background-image:linear-gradient(to bottom,#41a58c,#5aaf4f);  
-    color:white;
+    color:white; 
 }
 .itemInventory{
     font-size: 1.2rem;
