Added a temp file and changes some CSS

--- a/stocks.css
+++ b/stocks.css
@@ -12,7 +12,7 @@ html,body{
 }
 :root{ --navbarGray:#f3f3f3;
         --navbarGreen: #418d60;
-        --navbarDarkGreen:#2b5f40;
+        --navbarDarkGreen:#073619;
         --footer:#102c1b;
         --mainColor:#e8f3ec;
 
